# Chatbot

./: README.md
1st chatbot/: pyproject.toml
1st chatbot/src/hello/: chatbot.py
2nd chatbot/: pyproject.toml  requirements.txt
2nd chatbot/src/2ndchatbot/: .env  __init__.py  hello.py
