[project]
name = "2ndchatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "saadkhawar15", email = "saadkhawar169@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents[litellm]>=0.0.16",
    "python-env>=1.0.0",
]

[project.scripts]
2ndchatbot = "2ndchatbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
